# simple_dmrg

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: one_dim_hubbard_bd.ipynb  simple_dmrg.ipynb  simple_dmrg_example.html  simple_dmrg_example.ipynb  simple_dmrg_example_two_body.ipynb
src/dmrg_from_scratch/: __init__,py  dmrg_functions.py  mps_mpo_functions.py
src/simple_dmrg/: dmrg_functions.py  mpo_construction.py  mpo_operations.py  mps_functions.py
test/: test_dmrg.py  test_dmrg_step_by_step.py  test_mps_functions.py
